<resources>
    <string name="app_name">LBSmobile</string>
    <string name="wtf">LBSmobile</string>
    <string name="not_login">Nie zalogowano</string>

    <string name="advertisements">Ogłoszenia</string>
    <string name="my_advertisements">Moje ogłoszenia</string>
    <string name="messages">Wiadomości</string>
    <string name="new_adv">Dodaj ogłoszenie</string>
    <string name="adv_title">Tytuł</string>
    <string name="adv_category">Kategoria</string>
    <string name="adv_description">Opis</string>
    <string name="adv_localization">Lokalizacja</string>
    <string name="adv_phone">Numer telefonu</string>
    <string name="adv_apply">Zatwierdź</string>
    <string name="adv_price">Cena (zł)</string>

    <string name="facebook_app_id">1661107873985559</string>
    <string name="fb_login_protocol_scheme">fb1661107873985559</string>

    <string-array name="Categories">
        <item>Motoryzacja</item>
        <item>Elektronika</item>
        <item>Dla Dzieci</item>
        <item>Ślub i Wesele</item>
        <item>Moda</item>
        <item>Sport i Hobby</item>
        <item>Oddam za darmo</item>
        <item>Rolnictwo</item>
        <item>Praca</item>
        <item>Muzyka i Edukacja</item>
        <item>Moda</item>
        <item>Sport i Hobby</item>
        <item>Dom i Ogród</item>
        <item>Noclegi</item>
    </string-array>


</resources>
