<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_advert"
            android:title="@string/new_adv"
            android:icon="@drawable/ic_add" />
        <item
            android:id="@+id/nav_advert"
            android:title="@string/advertisements"
            android:icon="@drawable/ic_adv"/>
        <item
            android:id="@+id/nav_my_advert"
            android:title="@string/my_advertisements"
            android:icon="@drawable/ic_my_adv"/>
        <item
            android:id="@+id/nav_messages"
            android:title="@string/messages"
            android:icon="@drawable/ic_msg"/>
        <item
            android:id="@+id/nav_logout"
            android:title="Wyloguj się"
            android:icon="@drawable/ic_exit"/>
    </group>
</menu>