<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".NewAdvActivity">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/gallery"
            android:background="@android:color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:hint="@string/adv_title"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/gallery"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/category"
            android:hint="@string/adv_category"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/title"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/price"
            android:hint="@string/adv_price"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/category"
            android:layout_marginTop="10dp"
            android:inputType="number" />
        <MultiAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:hint="@string/adv_description"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/price"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/localization"
            android:hint="@string/adv_localization"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/description"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/phone"
            android:hint="@string/adv_phone"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/localization"
            android:layout_marginTop="10dp"
            android:inputType="number" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/apply"
            android:text="@string/adv_apply"
            android:layout_below="@+id/phone"
            android:onClick="Apply"/>
    </RelativeLayout>
</ScrollView>